lab 8 responsive scatterplot

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li><a href="trails-skeleton/index.html">Lab 7 - Linked Bar Chart and Scatterplot</a></li>
     <li><a href="stock-skeleton/index.html">Optional: Stock Visualization</a></li>
     <li><a href="stream-stacks/index.html">Optional: Stream Stacks Visualization</a></li>
+    <li><a href="">Lab 8: Responsive Scatterplot</a></li>
   </ul>
 </body>
 </html>
