--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><a href="trails-skeleton/index.html">Lab 7 - Linked Bar Chart and Scatterplot</a></li>
     <li><a href="stock-skeleton/index.html">Optional: Stock Visualization</a></li>
     <li><a href="stream-stacks/index.html">Optional: Stream Stacks Visualization</a></li>
-    <li><a href="responsive/index.html">Lab 8: Responsive Scatterplot</a></li>
+    <li><a href="responsive/index.html">Responsive</a></li>
   </ul>
 </body>
 </html>
