--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 </head>
 <body>
   <h1>Mary Elizabeth Shoop</h1>
-  <p>This website is for Data Vis</p>
+  <p>Data Visualization</p>
+
+  <h2>CSC362 Data Visualization Final Project</h2>
+  <ul>
+    <li>Here is a link to the pdf with our write-ups and my personal reflection: </li>
+    <li>Here is a link to our final visualization: </li>
+  </ul>
 
   <h2>Coursework</h2>
   <h3>CSC 362 Data Visualization</h3>
