--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <p>Data Visualization</p>
 
   <h2>CSC362 Data Visualization Final Project</h2>
+  <img> <a href="images/data vis screenshot.png"></a>
   <ul>
     <li>Here is a link to the pdf with our write-ups and my personal reflection: </li>
     <li>Here is a link to our final visualization: </li>
