--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <p>Data Visualization</p>
 
   <h2>CSC362 Data Visualization Final Project</h2>
-  <img> <a href="images/data vis screenshot.png"></a>
+  <img src="images/data vis screenshot.png" alt="Screenshot of final visualization" 
+     style="max-width: 100%; height: auto; display: block; margin: 20px 0;">
   <ul>
     <li>Here is a link to the pdf with our write-ups and my personal reflection: </li>
     <li>Here is a link to our final visualization: </li>
