--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <p>Data Visualization</p>
 
   <h2>CSC362 Data Visualization Final Project</h2>
-  <img src="images/data vis screenshot.png" alt="Screenshot of final visualization" 
-     style="max-width: 100%; height: auto; display: block; margin: 20px 0;">
+  <img src="files/data vis screenshot.png" alt="Screenshot of final visualization" 
   <ul>
-    <li>Here is a link to the pdf with our write-ups and my personal reflection: </li>
+    <li>
+      <!-- Here is a link to <a href="" target="_blank">our write-ups</a> -->
+      and my <a href="files/362_finalPersonalReflection.pdf" target="_blank">personal reflection</a>.</li>
     <li>Here is a link to our final visualization: </li>
   </ul>
 
