--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>Data Visualization</p>
 
   <h2>CSC362 Data Visualization Final Project</h2>
-  <img src="files/data vis screenshot.png" alt="Screenshot of final visualization" 
+  <img src="files/data vis screenshot.png" alt="Screenshot of final visualization" width="300" height="300">
   <ul>
     <li>
       <!-- Here is a link to <a href="" target="_blank">our write-ups</a> -->
