--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   <p>Data Visualization</p>
 
   <h2>CSC362 Data Visualization Final Project</h2>
-  <img src="files/data vis screenshot.png" alt="Screenshot of final visualization" width="300" height="300">
+  <img src="files/data vis screenshot.png" alt="Screenshot of final visualization" width="500" height="300">
   <ul>
-    <li>
       <!-- Here is a link to <a href="" target="_blank">our write-ups</a> -->
       and my <a href="files/362_finalPersonalReflection .pdf" target="_blank">personal reflection</a>.</li>
-    <li>Here is a link to our final visualization: </li>
+    <li>Here is a link to our <a href="trails-skeleton/index.html">final visualization</a>.</li>
   </ul>
 
   <h2>Coursework</h2>
