--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <ul>
       <!-- Here is a link to <a href="" target="_blank">our write-ups</a> -->
       and my <a href="files/362_finalPersonalReflection .pdf" target="_blank">personal reflection</a>.</li>
-    <li>Here is a link to our <a href="trails-skeleton/index.html">final visualization</a>.</li>
+    <li>Here is a link to our <a href="DataVisFinal/index.html">final visualization</a>.</li>
   </ul>
 
   <h2>Coursework</h2>
