--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <h2>CSC362 Data Visualization Final Project</h2>
   <img src="files/data vis screenshot.png" alt="Screenshot of final visualization" width="500" height="300">
   <ul>
-      Here is a link to <a href="files/362_final_writeup.pdf" target="_blank">our write-ups</a>
-      and my <a href="files/362_finalPersonalReflection .pdf" target="_blank">personal reflection</a>.</li>
-    <li>Here is a link to our <a href="DataVisFinal/index.html">final visualization</a>.</li>
+      Here is a link to <a href="files/finalWriteUp_362.pdf" target="_blank">our write-ups</a>
+      and my <a href="files/362_finalPersonalReflection .pdf" target="_blank">personal reflection</a>.
+      Here is a link to our <a href="DataVisFinal/index.html">final visualization</a>.
   </ul>
 
   <h2>Coursework</h2>
